@@ -21,6 +21,7 @@
   * Auto-center M.Loader view when show() is called and the loader was hidden before
   * Fixed a bug in M.FormView's showErrors()
   * Added Dynamic Value Computing to M.TextFieldView
+  * Added config property and getConfig() to M.Application to access properties of config.json within an application
 
 ** Version 0.5 - Date 03.06.2011 **
 
